--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
     "@docusaurus/core": "2.0.0-beta.18",
+    "@docusaurus/plugin-content-docs": "^2.0.0-beta.18",
     "@docusaurus/plugin-sitemap": "^2.0.0-beta.18",
     "@docusaurus/preset-classic": "2.0.0-beta.18",
     "@emotion/react": "^11",
