--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "stream-http": "^3.2.0"
   },
