--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@emotion/styled": "^11",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
+    "compare-versions": "^4.1.3",
     "docusaurus-node-polyfills": "^1.0.0",
     "framer-motion": "^6",
     "https-browserify": "^1.0.0",
+    "moment": "^2.29.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "posthog-docusaurus": "^1.0.3",
