--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^1.1.1",
     "compare-versions": "^4.1.3",
     "docusaurus-node-polyfills": "^1.0.0",
+    "docusaurus2-dotenv": "^1.4.0",
     "framer-motion": "^6",
     "https-browserify": "^1.0.0",
     "moment": "^2.29.3",
