--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@apidevtools/swagger-parser": "^10.0.3",
     "@chakra-ui/icons": "^1.1.7",
     "@chakra-ui/react": "^1.8.8",
-    "@docusaurus/core": "2.0.0-beta.18",
-    "@docusaurus/plugin-content-docs": "^2.0.0-beta.18",
-    "@docusaurus/plugin-sitemap": "^2.0.0-beta.18",
-    "@docusaurus/preset-classic": "2.0.0-beta.18",
+    "@docusaurus/core": "^2.0.0-beta.21",
+    "@docusaurus/plugin-content-docs": "^2.0.0-beta.21",
+    "@docusaurus/plugin-sitemap": "^2.0.0-beta.21",
+    "@docusaurus/preset-classic": "^2.0.0-beta.21",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@mdx-js/react": "^1.6.22",
