--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "react-syntax-highlighter": "^15.5.0",
     "stream-http": "^3.2.0"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
