--- a/docs/mint.config.json
+++ b/docs/mint.config.json
@@ -89,6 +89,12 @@
       ]
     },
     {
+      "group": "Vital iOS App",
+      "pages": [
+        "wearables/vital-app/introduction"
+      ]
+    },
+    {
       "group": "Providers",
       "pages": [
         "wearables/providers/introduction",
@@ -150,6 +156,7 @@
       "group": "Link",
       "pages": [
         "api-reference/link/generate-link-token",
+        "api-reference/link/create-code",
         "api-reference/link/link-oauth-provider",
         "api-reference/link/link-password-provider",
         "api-reference/link/link-email-provider",
