add caffeine and water endpoints to mint.config.json

--- a/docs/mint.config.json
+++ b/docs/mint.config.json
@@ -229,6 +229,7 @@
       "pages": [
         "api-reference/vitals/blood-oxygen",
         "api-reference/vitals/blood-pressure",
+        "api-reference/vitals/caffeine",
         "api-reference/vitals/cholesterol",
         "api-reference/vitals/glucose",
         "api-reference/vitals/heartrate",
@@ -237,7 +238,8 @@
         "api-reference/vitals/igg",
         "api-reference/vitals/ige",
         "api-reference/vitals/respiratory-rate",
-        "api-reference/vitals/steps"
+        "api-reference/vitals/steps",
+        "api-reference/vitals/water"
       ]
     },
     {
