--- a/package.json
+++ b/package.json
@@ -10,9 +10,6 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "trap popd EXIT; pushd docs && mintlify dev"
-  },
-  "devDependencies": {
-    "mintlify": "^3.0.57"
+    "start": "trap popd EXIT; pushd docs && npx mintlify dev"
   }
 }
