--- a/.github/workflows/openapi.yml
+++ b/.github/workflows/openapi.yml
@@ -7,7 +7,11 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "*" ]
-
+  
+  # triggered on a custom event
+  repository_dispatch:
+    types: [trigger_ci]
+ 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
