Update openapi schema committer email

--- a/.github/workflows/openapi.yml
+++ b/.github/workflows/openapi.yml
@@ -29,8 +29,8 @@ jobs:
           echo "$GITHUB_WORKSPACE"
           wget https://api.tryvital.io/openapi.json -O ./docs/swagger.json
           wget https://api.tryvital.io/management/openapi.json -O ./docs/org-management-api.json
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name Vital
+          git config user.email developers@tryvital.io
           git add .
           git commit -m "[automated commit] update swagger.json"
           git push
